@@ -1,47 +1,95 @@
 # Label Printer Application
 
-A JavaFX-based desktop app for selecting and printing labels on a fixed-size sheet. Data is stored locally under the `data/` directory.
+A JavaFX desktop application for managing and printing product labels on fixed-size sheets. Built for internal use in factory environment.
 
-## Requirements
+---
 
-- Java 17+
-- Gradle (or configure IntelliJ to use Gradle)
+## Features
 
-## Running
+- Fill label sheets with product, weight (g/m²), factory and date information
+- Click any label cell to select and edit it
+- Configurable label sheet layout (size, margins, gaps)
+- Adjustable font size
+- Saves all data locally between sessions
+- Prints directly to any installed printer
+- Full Swedish UI
 
-### Using Gradle
+---
 
-From the repo root:
+## Download & Install
 
-```bash
-gradle run
-```
+Go to the [Releases](../../releases) page and download the latest `Label-Printer-*.exe` installer.
 
-> If you see **"JavaFX runtime components are missing"**, it typically means the app was launched directly by the IDE without the JavaFX module path. Use the Gradle run task instead, or configure the IDE as shown below.
+- Installs to Program Files
+- Adds a Start Menu entry and Desktop shortcut
+- No Java installation required — runtime is bundled
 
-### IntelliJ IDEA
+> **Note:** Windows may show a SmartScreen warning on first launch since the app is not code-signed. Click **"More info" → "Run anyway"** to proceed. If your IT department has blocked unknown apps entirely, ask them to whitelist the installer.
 
-**Recommended:** Run the app using Gradle.
-
-1. Open **Settings → Build, Execution, Deployment → Build Tools → Gradle**.
-2. Set **Run tests using** and **Build and run using** to **Gradle**.
-3. Run the `run` task under **Gradle → Tasks → application**.
-
-**Alternative (manual JavaFX SDK):**
-
-1. Download the JavaFX SDK that matches your JDK (e.g., JavaFX 21).
-2. Add VM options to your run configuration:
-
-```
---module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.graphics,javafx.fxml
-```
+---
 
 ## Data Storage
 
-The app writes local data files under `data/`:
+All data is stored locally in a `data/` folder next to the application:
 
-- `products.csv`
-- `versions.txt`
-- `warehouses.txt`
-- `labels.csv`
-- `config.properties`
+| File | Contents |
+|---|---|
+| `Papperskvalitet.csv` | Product list (code + name) |
+| `Ytvikt.txt` | Weight options (g/m²) |
+| `Fabrik.txt` | Factory/warehouse list |
+| `etiketter.csv` | Saved label sheet state |
+| `config.properties` | Sheet layout & font settings |
+
+---
+
+## Building from Source
+
+### Requirements
+- JDK 17+
+- Maven 3.8+
+
+### Run locally
+```bash
+mvn clean javafx:run
+```
+
+### Build fat JAR
+```bash
+mvn clean package
+```
+
+### Build EXE installer
+Requires [WiX Toolset](https://wixtoolset.org) installed.
+
+```bash
+jpackage ^
+  --input target/ ^
+  --name "Label Printer" ^
+  --main-jar label-printer-1.0-SNAPSHOT.jar ^
+  --main-class Launcher ^
+  --type exe ^
+  --java-options "-Dfile.encoding=UTF-8" ^
+  --win-shortcut ^
+  --win-menu ^
+  --vendor "Your Company Name" ^
+  --dest output/
+```
+
+### Automated builds
+The project uses GitHub Actions to automatically build and publish an EXE installer when a version tag is pushed:
+
+```bash
+git tag v1.0
+git push origin v1.0
+```
+
+The resulting installer will appear under [Releases](../../releases) automatically.
+
+---
+
+## Development
+
+Built with:
+- Java 17
+- JavaFX 17
+- Maven (maven-shade-plugin for fat JAR)
